-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 11, 16
-
Component/s: hotspot
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8263423 | 11.0.12-oracle | Dukebot | P3 | Resolved | Fixed | b01 |
| JDK-8263867 | 11.0.12 | Roland Westrelin | P3 | Resolved | Fixed | b01 |
# Internal Error (/home/roland/jdk-jdk/src/hotspot/share/opto/loopnode.cpp:3752), pid=1215493, tid=1215508
# assert(_ltree_root->_child == __null || C->has_loops() || only_has_infinite_loops() || C->has_exception_backedge()) failed: parsing found no loops but there are some
from a CTW run. Also reproducible with:
/**
* @test
*
* @run main/othervm -Xcomp -XX:CompileOnly=TestInfiniteLoopNotInnerMost::test TestInfiniteLoopNotInnerMost
*
*/
public class TestInfiniteLoopNotInnerMost {
public static void main(String[] args) {
test(false);
}
private static void test(boolean flag) {
if (flag) {
while (true) {
for (int i = 1; i < 100; i *= 2) {
}
}
}
}
}
# assert(_ltree_root->_child == __null || C->has_loops() || only_has_infinite_loops() || C->has_exception_backedge()) failed: parsing found no loops but there are some
from a CTW run. Also reproducible with:
/**
* @test
*
* @run main/othervm -Xcomp -XX:CompileOnly=TestInfiniteLoopNotInnerMost::test TestInfiniteLoopNotInnerMost
*
*/
public class TestInfiniteLoopNotInnerMost {
public static void main(String[] args) {
test(false);
}
private static void test(boolean flag) {
if (flag) {
while (true) {
for (int i = 1; i < 100; i *= 2) {
}
}
}
}
}
- backported by
-
JDK-8263423 C2: "failed: parsing found no loops but there are some" assert failure
-
- Resolved
-
-
JDK-8263867 C2: "failed: parsing found no loops but there are some" assert failure
-
- Resolved
-
- relates to
-
JDK-8253923 C2 doesn't always run loop opts for compilations that include loops
-
- Resolved
-
-
JDK-8294217 Assertion failure: parsing found no loops but there are some
-
- Resolved
-
(1 links to)