8257574: C2: "failed: parsing found no loops but there are some" assert failure

Reviewed-by: thartmann, neliasso, chagedorn